# floe

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/floe/: config.py  main.py  models.py
src/floe/ai/: gemini.py
src/floe/bot/: commands.py  handlers.py
src/floe/scheduler/: jobs.py
src/floe/sheets/: client.py
tests/: conftest.py  test_gemini_parser.py  test_models.py  test_sheets.py
